# items_project

./: .gitignore  Dockerfile  Justfile  client.py  docker-compose.yml  pyproject.toml  server.py  yoyo.ini
api/: main.py
api/v1/depends/: container.py
api/v1/resources/: items.py
api/v1/tools/: items.py
app/api/: main.py
app/api/depends/: middlewares.py
app/api/mcps/depends/: container.py
app/api/mcps/resources/: items.py
app/api/mcps/tools/: items.py
app/migrations/: 20250906_01_gya4o.py
app/src/items/application/: .keep  create_item_use_case.py
app/src/items/domain/: item.py  item_repository.py
app/src/items/infrastructure/: item.sql  item_postgres_repository.py
app/src/shared/: settings.py
app/src/shared/application/: .keep  main_container.py
app/src/shared/domain/: aggregate_root.py  event.py
app/src/shared/infrastructure/: app_context.py  pool_connections.py  run_migrations.py
app/tests/integration/: conftest.py  test_app_initialization.py  test_main_container.py  test_tools.py
core/: settings.py
migrations/: 20250906_01_gya4o.py
src/items/application/: create_item_use_case.py
src/items/domain/: item.py  item_repository.py
src/items/infrastructure/: .keep  item_postgres_repository.py
src/shared/: settings.py
src/shared/application/: main_container.py
src/shared/infrastructure/: .keep  base_repository_postgres.py  pool_connections.py
tests/integration/: conftest.py  test_app_initialization.py  test_main_container.py  test_tools.py
