[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "requests",
    "jupyter",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "openai[aiohttp]>=1.102.0",
    "google-genai>=1.31.0",
    "uvicorn>=0.35.0",
]
