[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "requests",
    "jupyter",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "openai[aiohttp]>=1.102.0",
    "google-genai>=1.31.0",
    "uvicorn>=0.35.0",
    "asyncpg>=0.30.0",
    "yoyo-migrations>=9.0.0",
    "dependency-injector>=4.48.1",
    "fastapi>=0.116.1",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
]
